[project]
name = "pretix-airtelmoney"
dynamic = ["version"]
description = "Accept AirtelMoney payment"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Mika Andrianarijaona", email = "mikaoelitiana@gmail.com"},
]
maintainers = [
    {name = "Mika Andrianarijaona", email = "mikaoelitiana@gmail.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_airtelmoney = "pretix_airtelmoney:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/mikaoelitiana/pretix-airtelmoney"
repository = "https://github.com/mikaoelitiana/pretix-airtelmoney"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_airtelmoney.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
